// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Communities /> render communities [] 1`] = `
<div
  className="d-xl-flex"
>
  <UNDEFINED
    description="Communities | Description"
    keywords={Array []}
    language="en"
    title="Communities"
  />
  <div
    className="flex-xl-grow-1"
  >
    <Header
      SubHeader={[Function]}
      changeSorting={[MockFunction]}
      communitiesNumber={0}
      language={
        Object {
          "message": Object {
            "id": "app.common.all",
          },
          "sortBy": "",
        }
      }
      setLang={[Function]}
      sorting={Object {}}
    />
    <Content
      communities={Array []}
      getSuggestedCommunities={[Function]}
      isLastFetch={false}
      language={
        Object {
          "message": Object {
            "id": "app.common.all",
          },
          "sortBy": "",
        }
      }
      locale="en"
      sorting={Object {}}
      suggestedCommunities={Array []}
      suggestedCommunitiesLoading={true}
    />
  </div>
  <Base
    className="d-none d-xl-block"
  >
    <Aside
      communities={Array []}
      suggestedCommunities={Array []}
    />
  </Base>
</div>
`;

exports[`<Communities /> render communities [{ id: 1 }] 1`] = `
<div
  className="d-xl-flex"
>
  <UNDEFINED
    description="Communities | Description"
    keywords={
      Array [
        undefined,
      ]
    }
    language="en"
    title="Communities"
  />
  <div
    className="flex-xl-grow-1"
  >
    <Header
      SubHeader={[Function]}
      changeSorting={[MockFunction]}
      communitiesNumber={1}
      language={
        Object {
          "message": Object {
            "id": "app.common.all",
          },
          "sortBy": "",
        }
      }
      setLang={[Function]}
      sorting={Object {}}
    />
    <Content
      communities={
        Array [
          Object {
            "id": 1,
          },
        ]
      }
      getSuggestedCommunities={[Function]}
      isLastFetch={false}
      language={
        Object {
          "message": Object {
            "id": "app.common.all",
          },
          "sortBy": "",
        }
      }
      locale="en"
      sorting={Object {}}
      suggestedCommunities={Array []}
      suggestedCommunitiesLoading={true}
    />
  </div>
  <Base
    className="d-none d-xl-block"
  >
    <Aside
      communities={
        Array [
          Object {
            "id": 1,
          },
        ]
      }
      suggestedCommunities={Array []}
    />
  </Base>
</div>
`;
